Show actual shortened URL instead of slug only

--- a/shorten/templates/_url_row.html
+++ b/shorten/templates/_url_row.html
@@ -1,6 +1,6 @@
 <tr>
     <td></td>
-    <td>{{ u.slug }}</td>
+    <td><span class="has-text-grey-light">{{ base }}</span>{{ u.slug }}</td>
     <td>{{ u.dest }}</td>
     <td></td>
 </tr>
