--- a/shorten/templates/index.html
+++ b/shorten/templates/index.html
@@ -67,5 +67,33 @@
             //$('#customurl-ext').prop('disabled', false);
         }
     });
+
+    const IconResetter = {
+        run: function() {
+            $("a.copy-url span").removeClass("has-text-success").addClass("has-text-grey");
+            $("a.copy-url i").removeClass("fa-check").addClass("fa-copy");
+            $("a.copy-url").prop("title","Copy");
+        },
+
+        cancel: function() {
+                clearTimeout(this.timeoutID);
+        },
+
+        arm: function() {
+            if (typeof this.timeoutID === 'number') {
+                this.cancel();
+            }
+            this.timeoutID = setTimeout(this.run, 3000);
+        }
+    };
+
+    $("a.copy-url").click(function(){
+        IconResetter.run();
+        navigator.clipboard.writeText($(this).data("url"));
+        $(this).find("span").removeClass("has-text-grey").addClass("has-text-success");
+        $(this).find("i").removeClass("fa-copy").addClass("fa-check");
+        $(this).prop("title","Copied!");
+        IconResetter.arm();
+    });
 </script>
 {% endblock %}
