--- a/shorten/templates/index.html
+++ b/shorten/templates/index.html
@@ -38,7 +38,7 @@
 </section>
 
 <section class="section">
-<h1 class="title">Shortened URLS</h1>
+<h1 class="title">Shortened URLs</h1>
 <table class="table is-hoverable is-fullwidth">
     <thead>
         <tr>
