--- a/shorten/templates/_url_row.html
+++ b/shorten/templates/_url_row.html
@@ -9,5 +9,11 @@
     </td>
     <td><span class="has-text-grey-light">{{ base }}</span>{{ u.slug }}</td>
     <td>{{ u.dest }}</td>
-    <td></td>
+    <td>
+        <a title="Delete" class="delete-url" data-slug="{{ u.slug }}">
+            <span class="icon has-text-danger">
+                <i class="fas fa-times"></i>
+            </span>
+        </a>
+    </td>
 </tr>
