Allow deletion of multiple shortened URLs at the same time

--- a/shorten/templates/_url_row.html
+++ b/shorten/templates/_url_row.html
@@ -9,6 +9,7 @@
     </td>
     <td><span class="has-text-grey-light">{{ base }}</span>{{ u.slug }}</td>
     <td>{{ u.dest }}</td>
+    <td>{{ box(class_="urlcheckbox") }}</td>
     <td>
         <a title="Delete" class="delete-url" data-slug="{{ u.slug }}">
             <span class="icon has-text-danger">
